# WinDeskLauncher

./: .gitignore  CMakeLists.txt  README.md  VersionInfo.cmake  WinDeskLauncher.cpp  build-x64.cmd  build-x86.cmd  version.rc.in
